--- a/yugi/index.html
+++ b/yugi/index.html
@@ -1062,10 +1062,10 @@
 	}
 
 	function uploadToImgur(){
-		var clientID = '408ca149befe324';
-		var clientSecret = 'e1dfcbd26a488cf9f92a99e47a327d939973e8ee';
+		var clientID = '14ddd9d760e5185';
+		var clientSecret = '78b432e8275d4122088619a08558387dae7a8827';
 		var imgUpload = canvas.toDataURL('image/jpeg', 0.9).split(',')[1];
-		var albumUpload = 'Xa3XTQx9iA8Kqp1';
+		var albumUpload = 'N68yxvE';
 		// $.ajax({
 		// 	url : 'https://api.imgur.com/oauth2/authorize',
 		// 	type: 'GET',
