--- a/yugi/index.html
+++ b/yugi/index.html
@@ -1081,7 +1081,7 @@
 		// })
 
 		$.ajax({
-	    url: 'https://api.imgur.com/3/upload',
+	    url: 'https://api.imgur.com/3/image',
 	    type: 'post',
 	    headers: {
 	        Authorization: 'Client-ID '+clientID
