--- a/yugi/index.html
+++ b/yugi/index.html
@@ -362,7 +362,7 @@
 		</div>
 	</div>
 	<img id="rs_img" />
-	<p><a href="https://imgur.com/a/ctgr86e">Link Album</a></p>
+	<p><a href="https://imgur.com/a/dh7nQFe">Link Album</a></p>
 	<style type="text/css" media="screen">
 		#loading{
 			position: fixed;
@@ -1065,7 +1065,7 @@
 		var clientID = '14ddd9d760e5185';
 		var clientSecret = '78b432e8275d4122088619a08558387dae7a8827';
 		var imgUpload = canvas.toDataURL('image/jpeg', 0.9).split(',')[1];
-		var albumUpload = 'N68yxvE';
+		var albumUpload = 'A9igVDEtTYZgk1h';
 		// $.ajax({
 		// 	url : 'https://api.imgur.com/oauth2/authorize',
 		// 	type: 'GET',
