--- a/yugi/index.html
+++ b/yugi/index.html
@@ -362,7 +362,7 @@
 		</div>
 	</div>
 	<img id="rs_img" />
-	<p><a href="https://imgur.com/a/dh7nQFe">Link Album</a></p>
+	<p><a href="https://imgur.com/a/dh7nQFe" target="_blank">Link Album</a></p>
 	<style type="text/css" media="screen">
 		#loading{
 			position: fixed;
